# comparison-circuit-over-fq

code/: CMakeLists.txt  comparator.cpp  compare_cuda.cu  compare_cuda.cuh  comparison_circuit.cpp  sorting_circuit.cpp
code/cuhe/: CMakeLists.txt  CuHE.cu  set_ntl_gpm.sh
